# efl_gix_port

./: README.md  build.md  cross_arm64.txt  cross_file.txt  meson.build  meson_options.txt  x11_options.txt
src/generic/evas/: meson.build
src/lib/ecore_evas/: Ecore_Evas.h  ecore_evas.c  ecore_evas_gix.c  meson.build
src/lib/ecore_gix/: Ecore_Gix.h  ecore_Gix_Keys.h  ecore_gix.c  ecore_gix_dnd.c  ecore_gix_private.h  ecore_gix_selection.c  ecore_illume.c  ecore_selection.c  ecore_utils.c  meson.build
src/lib/eina/: eina_module.c
src/lib/elementary/: efl_ui_selection_manager_private.h  efl_ui_win.c  elm_config.c  elm_priv.h  elm_widget_colorselector.h  elm_widget_conform.h  els_cursor.c  meson.build
src/lib/evas/: meson.build
src/lib/evas/file/: evas_module.c
src/lib/evas/gesture/: meson.build
src/modules/ecore_evas/: meson.build
src/modules/ecore_evas/engines/gix/: ecore_evas_gix.c  meson.build
src/modules/ecore_imf/: meson.build
src/modules/evas/engines/: meson.build
src/modules/evas/engines/software_gix/: Evas_Engine_Gix.h  Makefile  Makefile.am  Makefile.in  evas_engine.c  evas_engine.h  evas_gix_buffer.c  evas_gix_outbuf.c  meson.build
src/modules/evas/engines/software_gix/.deps/: module_la-evas_engine.Plo  module_la-evas_gix_buffer.Plo  module_la-evas_gix_outbuf.Plo
src/modules/evas/engines/software_x11/: evas_engine.c
